--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
               <a class="navbar-item is-active">
                 Home
               </a>
-              <a class="navbar-item">
-                Recent Searches
-              </a>
-              <a class="navbar-item">
-                Navigation
-              </a>
+            
               <div class="field has-addons">
                 <form class="control">
                   <input class="input" type="text" placeholder="Search for">
@@ -60,6 +55,14 @@
         <img class="artist-pic">         
         </img>
       </div>
+    </div>
+
+    <div class="modal">
+      <div class="modal-background"></div>
+      <div class="modal-content">
+        <!-- Any other Bulma elements you want -->
+      </div>
+      <button class="modal-close is-large" aria-label="close"></button>
     </div>
   </section>
   
