--- a/index.html
+++ b/index.html
@@ -1,69 +1,128 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+		<link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.2/css/bulma.min.css">
     <title>Music Website</title>
 </head>
 
 <body>
-<section class="hero is-primary is-medium">
-    <!-- Hero head: will stick at the top -->
-    <div class="hero-head">
-      <nav class="navbar">
-        <div class="container">
-          <div class="navbar-brand">
-            <a class="navbar-item">
-              <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
-            </a>
-            <span class="navbar-burger" data-target="navbarMenuHeroA">
-              <span></span>
-              <span></span>
-              <span></span>
-            </span>
-          </div>
-          <div id="navbarMenuHeroA" class="navbar-menu">
-            <div class="navbar-end">
-              <a class="navbar-item is-active">
-                Home
-              </a>
-              <a class="navbar-item">
-                Recent Searches
-              </a>
-              <a class="navbar-item">
-                Navigation
-              </a>
-              <div class="field has-addons">
-                <form class="control">
-                  <input class="input" type="text" placeholder="Search for">
-                </form>
-                <div class="control">
-                  <button id="searchbutton" class="button is-info">
-                    Search
-                  </button>
+    <section class="hero is-primary is-medium">
+        <!-- Hero head: will stick at the top -->
+        <div class="hero-head">
+            <nav class="navbar">
+                <div class="container">
+                    <div class="navbar-brand">
+                      <header class="navbar-item">
+              <style>
+                @import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap');
+                </style>
+             <h1>Artist Master</h1>
+            </header>
+                        <span class="navbar-burger" data-target="navbarMenuHeroA">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                    </div>
+                    <div id="navbarMenuHeroA" class="navbar-menu">
+                        <div class="navbar-end">
+                          
+                          <!-- Eric adding button for the recent search ... -->
+                          <button id="recent-search" class="button is-info">
+                            Recent Search
+                        </button>
+                        <div class="modal" id="search-modal">
+                          <div class="modal-background"></div>
+                          <div class="modal-card">
+                            <header class="modal-card-head">
+                              <p class="modal-card-title">Recent Searches</p>
+                              <button class="delete" aria-label="close"></button>
+                            </header>
+                            <section class="modal-card-body">
+                              <!-- Content ... -->
+                            </section>
+                            <footer class="modal-card-foot">
+                              <button class="button is-success">Save changes</button>
+                              <button class="button">Cancel</button>
+                            </footer>
+                          </div>
+                        </div>
+
+                        <!-- Eric adding modal for recent search... -->
+                                  <span class="icon is-small is-left">
+                                    <i class="fas fa-globe"></i>
+                                  </span>
+                                </p>
+                              </div>
+                                <form class="control">
+                                    <input class="input" type="text" placeholder="Search for">
+                                </form>
+                                <div class="control">
+                                    <button id="searchbutton" class="button is-info">
+                                        Search
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
-          </div>
+            </nav>
         </div>
-      </nav>
-    </div>
-  
-    <!-- Hero content: will be in the middle -->
-    <div class="hero-body">
-      <div class="container has-text-centered">
-        <p class="title">
-          Title
-        </p>
-        <img class="artist-pic">         
-        </img>
-      </div>
-    </div>
-  </section>
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="assets/script.js"></script>
+
+        <!-- Hero content: will be in the middle -->
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <img class="artist-pic">
+                </img>
+            </div>
+        </div>
+    </section>
+
+    <div class="box">
+        <article class="media">
+            <div class="media-left">
+                <figure class="image is-128x128">
+                    <img class="artist-pic" alt="Image">
+                </figure>
+            </div>
+            <div class="media-content">
+                <div class="content">
+                    <p>
+                       asdf
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <div class="box">
+                                    <article class="media">
+                                        <div class="media-left">
+                                        </div>
+                                        <div class="media-content">
+                                            <div class="content">
+                                                <p>
+                                                asdf
+                                                </p>
+                                            </div>
+                                            <nav class="level is-mobile">
+                                                <div class="level-left">
+                                                    <a class="level-item" aria-label="reply">
+                                                        <span class="icon is-small">
+                                                    </a>
+                                                </div>
+                                            </nav>
+                                        </div>
+                                    </article>
+                                </div>
+
+                                <script
+                                    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                                <script src="assets/script.js"></script>
 </body>
-  </html>
+
+</html>
