recent searches modal

--- a/index.html
+++ b/index.html
@@ -35,23 +35,16 @@
                           <button id="recent-search" class="button is-info">
                             Recent Search
                         </button>
-                        <div class="modal" id="search-modal">
-                          <div class="modal-background"></div>
-                          <div class="modal-card">
-                            <header class="modal-card-head">
-                              <p class="modal-card-title">Recent Searches</p>
-                              <button class="delete" aria-label="close"></button>
-                            </header>
-                            <section class="modal-card-body">
-                              <!-- Content ... -->
-                            </section>
-                            <footer class="modal-card-foot">
-                              <button class="button is-success">Save changes</button>
-                              <button class="button">Cancel</button>
-                            </footer>
+                        <!--- might have to change class names -->
+                        <div id="search-modal" class="modal hide">
+                            <div class="modal-background"></div>
+                            <div class="modal-content">
+                              <!-- Any other Bulma elements you want -->
+                              <div class="row"></div>
+                            </div>
+                            <button class="modal-close is-large" aria-label="close"></button>
                           </div>
-                        </div>
-
+                     
                         <!-- Eric adding modal for recent search... -->
                                   <span class="icon is-small is-left">
                                     <i class="fas fa-globe"></i>
