--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div id="search-modal" class="modal hide">
                             <div class="modal-background"></div>
                             <div class="modal-content">
-                              <!-- Any other Bulma elements you want -->
+                              <!--appending localStorage into class row -->
                               <div class="row"></div>
                             </div>
                             <button class="modal-close is-large" aria-label="close"></button>
