--- a/index.html
+++ b/index.html
@@ -1,97 +1,134 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.2/css/bulma.min.css">
-    <title>Music Website</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.2/css/bulma.min.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <title>Music Website</title>
 </head>
 
 <body>
-    <section class="hero is-primary is-medium">
-        <!-- Hero head: will stick at the top -->
-        <div class="hero-head">
-            <nav class="navbar">
-                <div class="container">
-                    <div class="navbar-brand">
-                        <span class="navbar-burger" data-target="navbarMenuHeroA">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </span>
-                    </div>
-                    <div id="navbarMenuHeroA" class="navbar-menu">
-                        <div class="navbar-end">
-                            <a class="navbar-item is-active">
-                                Home
-                            </a>
-                            <a class="navbar-item">
-                                Recent Searches
-                            </a>
-                            <div class="field has-addons">
-                                <form class="control">
-                                    <input class="input" type="text" placeholder="Search for">
-                                </form>
-                                <div class="control">
-                                    <button id="searchbutton" class="button is-info">
-                                        Search
-                                    </button>
-                                </div>
+  <section class="hero is-primary is-medium">
+    <!-- Hero head: will stick at the top -->
+    <div class="hero-head">
+      <nav class="navbar">
+        <div class="container">
+          <div class="navbar-brand">
+            <header class="navbar-item">
+              <style>
+                @import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap');
+              </style>
+              <h1>Artist Master</h1>
+            </header>
+            <span class="navbar-burger" data-target="navbarMenuHeroA">
+              <span></span>
+              <span></span>
+              <span></span>
+            </span>
+          </div>
+          <div id="navbarMenuHeroA" class="navbar-menu">
+            <div class="navbar-end">
+               <!-- Eric adding button for the recent search ... -->
+                          <button id="recent-search" class="button is-info">
+                            Recent Search
+                        </button>
+                        <!--- might have to change class names -->
+                        <div id="search-modal" class="modal hide">
+                            <div class="modal-background"></div>
+                            <div class="modal-content">
+                              <!--appending localStorage into class row -->
+                              <div class="row"></div>
                             </div>
-                        </div>
-                    </div>
+                            <button class="modal-close is-large" aria-label="close"></button>
+                          </div>
+                     
+                        <!-- Eric adding modal for recent search... -->
+              <div class="field has-addons">
+                <form class="control">
+                  <input class="input" type="text" placeholder="Search for">
+                </form>
+                <div class="control">
+                  <button id="searchbutton" class="button is-info">
+                    Search
+                  </button>
                 </div>
-            </nav>
-        </div>
-
-        <!-- Hero content: will be in the middle -->
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <p class="title">
-                    Title
-                </p>
-
-                <img class="artist-pic">
-
-                <p class="country"></p>
+              </div>
             </div>
+          </div>
         </div>
-    </section>
+      </nav>
+    </div>
 
-    <section id="eventList">
+    <!-- Hero content: will be in the middle -->
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h2>Search your favorite artists!</h2>
+      </div>
+    </div>
+  </section>
+
+  <div class="card">
+    <div class="card-image">
+      <figure class="image is-128x128">
+        <img class="artist-pic">
+      </figure>
+    </div>
+    <div class="card-content">
+      <div class="media">
+        <div class="media-left">
+          <figure class="image is-48x48">
+            <img class="logo">
+          </figure>
+        </div>
+        <div class="media-content">
+          <p class="title">
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="country">
+        </div>
+      </div>
+      <div class="card">
+        <div class="bio">
+        </div>
+      </div>
+      <div class="card">
+        <div class="genre">
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+  
+ <section id="eventList">
 
     </section>
-    
-    <!-- <button id="test">Show Modal</button> -->
-    <div id="infoModal" class="modal hide">
+  
+   <div id="infoModal" class="modal hide">
       <div class="modal-background"></div>
       <div class="modal-content">
         <!-- Any other Bulma elements you want -->
         Please check the spelling of the artist's name. Special characters not accepted. 
       </div>
-      <button class="modal-close is-large" aria-label="close"></button>
+      <button class="modal-close is-large no-search-modal" aria-label="close"></button>
     </div>
-  </section>
 
 </section>
 
-
-
-<!-- <button id="test">Show Modal</button> -->
 <div id="noSearchModal" class="modal hide">
   <div class="modal-background"></div>
   <div class="modal-content">
     <!-- Any other Bulma elements you want -->
     Please enter an artist to search for. 
   </div>
-  <button class="modal-close is-large" aria-label="close"></button>
+  <button class="modal-close is-large no-search-modal-close" aria-label="close"></button>
 </div>
-
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="assets/script.js"></script>
+  <script src="assets/script.js"></script>
 </body>
 
 </html>
