Adding final html and css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.2/css/bulma.min.css">
+  <link rel="stylesheet" href="assets/styles.scss">
   <link rel="stylesheet" href="assets/style.css">
   <title>Music Website</title>
 </head>
 
 <body>
-  <section class="hero is-primary is-medium">
+  <section class="hero has-background-black is-small">
     <!-- Hero head: will stick at the top -->
     <div class="hero-head">
       <nav class="navbar">
@@ -30,27 +31,29 @@
           </div>
           <div id="navbarMenuHeroA" class="navbar-menu">
             <div class="navbar-end">
-               <!-- Eric adding button for the recent search ... -->
-                          <button id="recent-search" class="button is-info">
-                            Recent Search
-                        </button>
-                        <!--- might have to change class names -->
-                        <div id="search-modal" class="modal hide">
-                            <div class="modal-background"></div>
-                            <div class="modal-content">
-                              <!--appending localStorage into class row -->
-                              <div class="row"></div>
-                            </div>
-                            <button class="modal-close is-large" aria-label="close"></button>
-                          </div>
-                     
-                        <!-- Eric adding modal for recent search... -->
+              <!-- Eric adding button for the recent search ... -->
+              <button id="recent-search" class="button has-background-white">
+                Recent Search
+              </button>
+              <!--- might have to change class names -->
+              <div id="search-modal" class="modal hide">
+              <!---Zach added 'has-background-info-dark to class'-->
+              <!--This edit is whats needed to change bulma-->
+                <div class="modal-background has-background-black"></div>
+                <div class="modal-content has-text-primary-light">
+                  <!--appending localStorage into class row -->
+                  <div class="row"></div>
+                </div>
+                <button class="modal-close is-large" aria-label="close"></button>
+              </div>
+
+              <!-- Eric adding modal for recent search... -->
               <div class="field has-addons">
                 <form class="control">
                   <input class="input" type="text" placeholder="Search for">
                 </form>
                 <div class="control">
-                  <button id="searchbutton" class="button is-info">
+                  <button id="searchbutton" class="button has-background-white">
                     Search
                   </button>
                 </div>
@@ -64,8 +67,18 @@
     <!-- Hero content: will be in the middle -->
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h2>Search your favorite artists!</h2>
+        <h2>Search for your favorite artists</h2>
+        <div class="card-content">
+        </div>
+        <!--Zach added "is-flex is-horizontal-center" using bulma/css-->
+        <!--"is-horizontal-center" is working from CSS, check line 11-->
+        <div class="media is-flex is-horizontal-center">
+          <figure class="image is-large ">
+            <img class="logo">
+          </figure>
+        </div>
       </div>
+    </div>
     </div>
   </section>
 
@@ -75,58 +88,54 @@
         <img class="artist-pic">
       </figure>
     </div>
-    <div class="card-content">
-      <div class="media">
-        <div class="media-left">
-          <figure class="image is-48x48">
-            <img class="logo">
-          </figure>
-        </div>
-        <div class="media-content">
-          <p class="title">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="country">
-        </div>
-      </div>
-      <div class="card">
-        <div class="bio">
-        </div>
-      </div>
-      <div class="card">
-        <div class="genre">
-        </div>
-      </div>
-      </div>
+    <div class="media-content message-header">
+      <p class="title has-text-white-bis">
     </div>
   </div>
-  
- <section id="eventList">
-
-    </section>
-  
-   <div id="infoModal" class="modal hide">
-      <div class="modal-background"></div>
-      <div class="modal-content">
-        <!-- Any other Bulma elements you want -->
-        Please check the spelling of the artist's name. Special characters not accepted. 
-      </div>
-      <button class="modal-close is-large no-search-modal" aria-label="close"></button>
+<!--Added padding/margin with mt-2 & px-3"-->
+  <div class="card mt-2 px-3">
+    <div class="country">
     </div>
-
-</section>
-
-<div id="noSearchModal" class="modal hide">
-  <div class="modal-background"></div>
-  <div class="modal-content">
-    <!-- Any other Bulma elements you want -->
-    Please enter an artist to search for. 
   </div>
-  <button class="modal-close is-large no-search-modal-close" aria-label="close"></button>
-</div>
+  <div class="card mt-2 px-3">
+    <div class="bio">
+    </div>
+  </div>
+  <div class="card mt-2 px-3">
+    <div class="genre">
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="card mt-2 px-3">
+    <section id="eventList">
+  </div>
+
+  </section>
+
+  <div id="infoModal" class="modal hide">
+    <!--Zach added "has-background" & "has-text" as Bulma styling-->
+    <div class="modal-background has-background-black"></div>
+    <div class="modal-content has-text-primary-light">
+      <!-- Any other Bulma elements you want -->
+      Please check the spelling of the artist's name. Special characters not accepted.
+    </div>
+    <button class="modal-close is-large no-search-modal" aria-label="close"></button>
+  </div>
+
+  </section>
+
   
+  <div id="noSearchModal" class="modal hide">
+    <div class="modal-background has-background-black"></div>
+    <div class="modal-content has-text-primary-light">
+      <!-- Any other Bulma elements you want -->
+      <h3>Please enter an artist to search for.</h3>
+    </div>
+    <button class="modal-close is-large no-search-modal-close" aria-label="close"></button>
+  </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/script.js"></script>
 </body>
