button styling, mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </form>
               <div class="control">
                 <!-- attempting to make the button a submit to allow hitting enter -->
-                <button type="submit" form="control" id="searchbutton" class="button has-background-white">
+                <button type="submit" id="searchbutton" class="button has-background-white">
                   Search
                 </button>
               </div>
