--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.2/css/bulma.min.css">
   <!-- <link rel="stylesheet" href="assets/styles.scss"> -->
   <link rel="stylesheet" href="assets/style.css">
-  <title>Music Website</title>
+  <title>Artist Master</title>
 </head>
 
 <body>
